Fixed horizontal scrolling on small devices

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -45,7 +45,7 @@
 
 
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   body{
     padding:15px;
   }
